feat: backup DB and Migrate

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "postgres",
-    "database": "db_AHA",
+    "database": "AHA_DB_DEV",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
