--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "sequelize-cli": "^6.6.1"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
