--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.5",
+    "@chakra-ui/icon": "^3.1.0",
+    "@chakra-ui/icons": "^2.1.0",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
-    "framer-motion": "^10.13.1",
+    "framer-motion": "^10.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
