--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@videojs/themes": "^1.0.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "framer-motion": "^10.15.1",
@@ -27,7 +28,8 @@
     "react-router-dom": "^6.14.2",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "typewriter-effect": "^2.20.1"
+    "typewriter-effect": "^2.20.1",
+    "videojs-youtube": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -37,6 +39,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "video.js": "^8.3.0",
     "vite": "^4.4.5"
   }
 }
